# pySIESTA

./: README.MD  pyproject.toml  run.py  slurm.sh
configs/: default.yaml  run.yaml
configs/optimizer/: linear.yaml  pulay.yaml  sgd.yaml
examples/common/: RUN.fdf  S.psf
examples/molecular/0001/: STRUCT.fdf
examples/simple/0001/: RUN.fdf
pysiesta/: __init__.py  __main__.py  app.py  config.py
pysiesta/utils/: __init__.py  getters.py  siesta_io.py  units.py
pysiesta/utils/optimizer/: __init__.py
src/: .gitkeep  fortranfile.py  getters.py  siesta_io.py
src/optimizer/: linear.py  pulay.py
test/0001/: slurm.sh
